syntax = "proto3";

package notification;

option go_package = "lastmile/gen/go/notification";

message Notification {
  string id = 1;
  string user_id = 2; // Can be a driver or a rider
  string message = 3;
}

message SendNotificationRequest {
  Notification notification = 1;
}

message SendNotificationResponse {
  bool success = 1;
}

service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
}
